<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.quick619.project.NewStock"
    tools:showIn="@layout/activity_new_stock"
    android:background="#232222">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/upperThresh"
        android:editable="false"
        android:layout_below="@+id/curChange"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:textColor="#FFFFFF"
        android:hint="Top Baseline"
        android:textColorHint="#FFFFFF"
        android:contextClickable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/lowerThresh"
        android:editable="false"
        android:hint="Bottom Baseline"
        android:layout_below="@+id/upper$"
        android:layout_alignLeft="@+id/upperThresh"
        android:layout_alignStart="@+id/upperThresh"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm"
        android:src="@mipmap/check_circle_green"
        android:onClick="makeNewStock"
        android:layout_below="@+id/notifyTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#232222" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="$"
        android:id="@+id/low$"
        android:layout_alignBottom="@+id/lowerThresh"
        android:layout_toLeftOf="@+id/lowerThresh"
        android:layout_toStartOf="@+id/lowerThresh"
        android:layout_marginTop="86dp"
        android:layout_marginBottom="8dp"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="$"
        android:id="@+id/upper$"
        android:layout_alignBottom="@+id/upperThresh"
        android:layout_toLeftOf="@+id/upperThresh"
        android:layout_toStartOf="@+id/upperThresh"
        android:layout_alignLeft="@+id/low$"
        android:layout_alignStart="@+id/low$"
        android:layout_marginBottom="8dp"
        android:textColor="#FFFFFF" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notifyTime"
        android:entries="@array/incrementList"
        android:background="#d7d4d4"
        android:layout_marginTop="29dp"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/lowerThresh"
        android:layout_alignLeft="@+id/lowerThresh"
        android:layout_alignStart="@+id/lowerThresh"
        android:layout_alignRight="@+id/lowerThresh"
        android:layout_alignEnd="@+id/lowerThresh" />

    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:queryHint="Stock Name"
        android:background="#d7d4d4"
        android:clickable="true"
        android:contextClickable="false" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@android:drawable/arrow_down_float"
        android:layout_alignTop="@+id/notifyTime"
        android:layout_alignRight="@+id/notifyTime"
        android:layout_alignEnd="@+id/notifyTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$"
        android:id="@+id/curPrice"
        android:textAlignment="center"
        android:textSize="50dp"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/searchView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/searchResults"
        android:layout_alignEnd="@+id/searchResults"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+/-"
        android:id="@+id/curChange"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_below="@+id/curPrice"
        android:layout_alignLeft="@+id/curPrice"
        android:layout_alignStart="@+id/curPrice"
        android:layout_alignRight="@+id/searchResults"
        android:layout_alignEnd="@+id/searchResults"
        android:textColor="#FFFFFF" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchResults"
        android:background="#ffffff"
        android:backgroundTint="#919191"
        android:visibility="invisible"
        android:layout_below="@+id/searchView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
