<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Project</string>
    <string name="title_activity_stock_screen">StockScreen</string>
    <string name="title_activity_new_stock">NewStock</string>

    <string name="timerPrompt">Stock Refresh Rate</string>
    <string name="increment1">5 minutes</string>
    <string name="increment2">10 minutes</string>
    <string name="increment3">30 minutes</string>
    <string name="increment4">1 hour</string>
    <string name="increment5">2 hours</string>
    <string name="increment6">1 day</string>
    <string name="increment7">1 week</string>
    <string name="button3">+</string>

    <string-array name="incrementList">
        <item>@string/timerPrompt</item>
        <item>@string/increment1</item>
        <item>@string/increment2</item>
        <item>@string/increment3</item>
        <item>@string/increment4</item>
        <item>@string/increment5</item>
        <item>@string/increment6</item>
        <item>@string/increment7</item>
    </string-array>
    <string name="title_activity_stock_information">StockInformation</string>
    <string name="title_activity_edit_stock">EditStock</string>
</resources>