<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:descendantFocusability="blocksDescendants"
    android:padding="5dp"
    android:background="#232222">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:divider="#fcfcfc">

        <TextView android:id="@+id/name"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#3a49d1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/main_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#ffffff" />

        <TextView android:id="@+id/main_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/stockInfo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@android:drawable/ic_menu_edit"
        android:contentDescription=""
        android:onClick="editOnClick"
        android:layout_marginTop="10dp"
        android:tint="#3a49d1" />

</LinearLayout>