...
    tools:context=".MainActivity"
    android:background="#232222">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/stockList"
        android:clickable="true"
        android:contextClickable="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:dividerHeight="1dp"
        android:divider="#3a49d1"
...
